fix(discord-user-card): add missing padding

--- a/packages/discord-user-card/src/styles/components/activity.scss
+++ b/packages/discord-user-card/src/styles/components/activity.scss
@@ -177,6 +177,10 @@
     transition: opacity .2s ease-in-out;
 		font-family: var(--font-primary);
 
+		&:not(:first-child) {
+			margin-top: 8px;
+		}
+
 		&:hover {
 			opacity: .8;
 		}
